--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Serial Port API sample</string>
+    <string name="app_name">Robot Sdk Sample</string>
     <string name="about_msg">
 Serial Port API sample v1.1\n
 \n
