--- a/IMRobotLib/doc/机器人远程控制指令定义.md
+++ b/IMRobotLib/doc/机器人远程控制指令定义.md
@@ -47,10 +47,6 @@
 	{
 		"command": "stop"
 	}
-
-* operation
-
-	no
 	
 #### chargePower 自动回去冲电
 
@@ -59,10 +55,6 @@
 	{
 		"command": "chargePower"
 	}
-	
-* operation
-
-	no
 
 #### projector 投影控制
 
@@ -79,6 +71,20 @@
 	1. on
 	2. off
 
+#### rotate 根据角度旋转
+
+示例代码
+
+	{
+		"command": "rotate"
+		"operation": "180"
+
+	}
+
+* operation
+
+	取值范围大于0小于360(0-360)
+	
 #### autoWalk 游荡模式
 
 示例代码
@@ -87,9 +93,6 @@
 		"command": "autoWalk"
 	}
 
-* operation
-
-	no
 
 #### savePower 省电模式
 
@@ -98,7 +101,3 @@
 	{
 		"command": "savePower"
 	}
-
-* operation
-
-	no
